# rtx

./: CMakeLists.txt  color_rgb.cpp  ray_cast_hit.cpp  ray_cast_hit.h  rtx.h  sample  sample.cpp  scene.h  scene_object.h  testX11  testX11.cpp  vector3.cpp  vector3.h  vector4.h
rtx/: CMakeLists.txt  camera.cpp  camera.h  color.cc  color.h  detail.h  light.cpp  light.h  phong_color.h  plane.cpp  plane.h  ray3.h  reflect.h  rtx.h  scene.h  scene_object.h  screen.cc  screen.h  sphere.cpp  sphere.h  sun_light.cpp  sun_light.h  texture.cpp  texture.h  transparent.h  types.h  vector2.cc  vector2.h  vector3.cc  vector3.h  vector4.h
src/: CMakeLists.txt  camera.cpp  camera.h  color_rgb.cpp  color_rgb.h  light.h  phong_color.h  plane.cpp  plane.h  ray3.cpp  ray3.h  reflect.h  rtx.h  scene.cpp  scene.h  scene_object.cpp  scene_object.h  screen.cpp  screen.h  solid_color.h  sphere.cpp  sphere.h  sun_light.cpp  sun_light.h  texture.h  transparent.h  typedefs.h  vector3.cpp  vector3.h  vector4.cpp  vector4.h
test/: CMakeLists.txt  test.cc
